Revista con todos los trabajos, animaciones, optimizada

--- a/index.html
+++ b/index.html
@@ -9,137 +9,151 @@
   <body>
     <div class="presentacion">
       <div class="texto">
-        <h1>Sentidos que perciben... Cerebreo que puede ser engañado			</h1>
+        <h1>Sentidos que perciben y un cerebro que puede ser engañado			</h1>
         <h2>Colegio San José de Marcos Paz</h2>
         <p>Los alumnos/as de 4to y 5to año del Colegio San José de Marcos Paz nos invitan a "desconfiar" de nuestro cerebro.</p>
-        <p>Mediante distintos informes intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.</p>
+        <p>Mediante distintos informes* intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.</p>
+        <p><small>* Trabajos en proceso de corrección.</small></p>
       </div><img src="escudo.png" alt=""/>
     </div>
     <div class="trabajos">
-      <article><img class="poster" src="4a/grupo-1/poster.jpg" alt="poster científico"/>
-        <div class="informacion">
-          <h3 class="titulo">Ilusión óptica &quot;El chocolate infinito&quot;</h3>
-          <h4 class="integrantes">Emma Arias Mommeso, E A; Salpurido, S; Méndez, P; Zappala, L; Oviedo, R</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4a/grupo-1/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4a/grupo-1/poster.jpg">Poster Científico</a></p>
-        </div>
-      </article>
-      <article><img class="poster" src="4a/grupo-2/poster.jpg" alt="poster científico"/>
-        <div class="informacion">
-          <h3 class="titulo">Los engaños de las ilusiones opticas</h3>
-          <h4 class="integrantes">Lecumberry, M; Marquez, F; Blanco, T; Buttafuoco, F; Sotarello, M</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4a/grupo-2/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4a/grupo-2/poster.jpg">Poster Científico</a></p>
-        </div>
-      </article>
-      <article><img class="poster" src="4a/grupo-3/poster.jpg" alt="poster científico"/>
+      <article>
         <div class="informacion">
           <h3 class="titulo">La percepción del tiempo</h3>
-          <h4 class="integrantes">de Rocha, M L; Díaz, A; Moyano, J; Sanchez, M</h4>
-          <p class="resumen"></p>
+          <h4 class="integrantes"><small>de Rocha, M L; Díaz, A; Moyano, J; Sanchez, M</small></h4><img class="poster" src="4a/grupo-3/poster.jpg" alt="poster científico"/>
           <p class="informe"><a href="4a/grupo-3/informe.pdf">Artículo Científico</a></p>
           <p class="poster"><a href="4a/grupo-3/poster.jpg">Poster Científico</a></p>
         </div>
       </article>
-      <article><img class="poster" src="4a/grupo-4/poster.jpg" alt="poster científico"/>
+      <article>
         <div class="informacion">
-          <h3 class="titulo">Paradoja del cuadrado perdido</h3>
-          <h4 class="integrantes">Arana, A; Narváez, A; Díaz, B; Sanabria, B; Zandonadi, C; Díaz, G</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4a/grupo-4/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4a/grupo-4/poster.jpg">Poster Científico</a></p>
+          <h3 class="titulo">Los engaños de las ilusiones opticas</h3>
+          <h4 class="integrantes"><small>Lecumberry, M; Marquez, F; Blanco, T; Buttafuoco, F; Sotarello, M</small></h4>
+          <p class="informe"><a href="4a/grupo-2/informe.pdf">Artículo Científico</a></p>
         </div>
       </article>
-      <article><img class="poster" src="4a/grupo-5/poster.jpg" alt="poster científico"/>
-        <div class="informacion">
-          <h3 class="titulo">La extraña paradoja de Shepard</h3>
-          <h4 class="integrantes">Gallinares, L; Reccia, E; Soto, I; Soto, F</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4a/grupo-5/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4a/grupo-5/poster.jpg">Poster Científico</a></p>
-        </div>
-      </article>
-      <article><img class="poster" src="4a/grupo-6/poster.jpg" alt="poster científico"/>
+      <article>
         <div class="informacion">
           <h3 class="titulo">Respuestas condicionadas</h3>
-          <h4 class="integrantes">Carrizo, A; Dominguez, T; Esteves, D; García, F</h4>
-          <p class="resumen"></p>
+          <h4 class="integrantes"><small>Carrizo, A; Dominguez, T; Esteves, D; García, F</small></h4><img class="poster" src="4a/grupo-6/poster.jpg" alt="poster científico"/>
           <p class="informe"><a href="4a/grupo-6/informe.pdf">Artículo Científico</a></p>
           <p class="poster"><a href="4a/grupo-6/poster.jpg">Poster Científico</a></p>
         </div>
       </article>
-      <article><img class="poster" src="4a/grupo-7/poster.jpg" alt="poster científico"/>
-        <div class="informacion">
-          <h3 class="titulo">Ilusión de Hering</h3>
-          <h4 class="integrantes">Mandaradoni, JP; Saravia, N</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4a/grupo-7/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4a/grupo-7/poster.jpg">Poster Científico</a></p>
-        </div>
-      </article>
-      <article><img class="poster" src="4b/grupo-1/poster.jpg" alt="poster científico"/>
-        <div class="informacion">
-          <h3 class="titulo">El misterio del vestido viral</h3>
-          <h4 class="integrantes">Ibarra, C; Bejarano, N; Traba, M; Díaz, L; Schiaffi, C; Urbizu, C</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4b/grupo-1/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4b/grupo-1/poster.jpg">Poster Científico</a></p>
-        </div>
-      </article>
-      <article><img class="poster" src="4b/grupo-2/poster.jpg" alt="poster científico"/>
-        <div class="informacion">
-          <h3 class="titulo">Ilusión de Craikcornsweet</h3>
-          <h4 class="integrantes">Toloza, K; Ramirez, M; Dominguez, A; Ribeiro, G; Ledesma, L</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4b/grupo-2/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4b/grupo-2/poster.jpg">Poster Científico</a></p>
-        </div>
-      </article>
-      <article><img class="poster" src="4b/grupo-3/poster.jpg" alt="poster científico"/>
-        <div class="informacion">
-          <h3 class="titulo">Neurociencia computacional</h3>
-          <h4 class="integrantes">Oviedo, L; Díaz, C</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4b/grupo-3/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4b/grupo-3/poster.jpg">Poster Científico</a></p>
-        </div>
-      </article>
-      <article><img class="poster" src="4b/grupo-4/poster.jpg" alt="poster científico"/>
+      <article>
         <div class="informacion">
           <h3 class="titulo">Christopher Nolan y la manipulación del sonido</h3>
-          <h4 class="integrantes">Arainty, V; Gonzalez, V; Delpieri, M; Benitez Bohm, J</h4>
-          <p class="resumen"></p>
+          <h4 class="integrantes"><small>Arainty, V; Gonzalez, V; Delpieri, M; Benitez Bohm, J</small></h4><img class="poster" src="4b/grupo-4/poster.jpg" alt="poster científico"/>
           <p class="informe"><a href="4b/grupo-4/informe.pdf">Artículo Científico</a></p>
           <p class="poster"><a href="4b/grupo-4/poster.jpg">Poster Científico</a></p>
         </div>
       </article>
-      <article><img class="poster" src="4b/grupo-5/poster.jpg" alt="poster científico"/>
+      <article>
         <div class="informacion">
-          <h3 class="titulo">¿Yanny o Laurel?</h3>
-          <h4 class="integrantes">Abt Momesso; Cahue; Hidalgo; Testtibraga; Damico; Rotela, J</h4>
-          <p class="resumen"></p>
-          <p class="informe"><a href="4b/grupo-5/informe.pdf">Artículo Científico</a></p>
-          <p class="poster"><a href="4b/grupo-5/poster.jpg">Poster Científico</a></p>
+          <h3 class="titulo">Ilusión de Craikcornsweet</h3>
+          <h4 class="integrantes"><small>Toloza, K; Ramirez, M; Dominguez, A; Ribeiro, G; Ledesma, L</small></h4><img class="poster" src="4b/grupo-2/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="4b/grupo-2/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="4b/grupo-2/poster.jpg">Poster Científico</a></p>
         </div>
       </article>
-      <article><img class="poster" src="4b/grupo-6/poster.jpg" alt="poster científico"/>
+      <article>
         <div class="informacion">
           <h3 class="titulo">El ser humano y las ilusiones auditivas</h3>
-          <h4 class="integrantes">Gonzalez, M; Madía, V; Villaba, M</h4>
-          <p class="resumen"></p>
+          <h4 class="integrantes"><small>Gonzalez, M; Madía, V; Villaba, M</small></h4><img class="poster" src="4b/grupo-6/poster.jpg" alt="poster científico"/>
           <p class="informe"><a href="4b/grupo-6/informe.pdf">Artículo Científico</a></p>
           <p class="poster"><a href="4b/grupo-6/poster.jpg">Poster Científico</a></p>
         </div>
       </article>
-      <article><img class="poster" src="4b/grupo-7/poster.jpg" alt="poster científico"/>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">Los ciclos del sueño y el ruido blanco</h3>
+          <h4 class="integrantes"><small>Blanco, V; Gimenez, J; Montiel, L; Scalia, J; Crespe, J; Narvaez, M</small></h4><img class="poster" src="5a/grupo-1/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="5a/grupo-1/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="5a/grupo-1/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">El calculo numérico en la ayuda de prevención de Alzheimer</h3>
+          <h4 class="integrantes"><small>Bendini, L; Goyeneche, V; Maiolino, V; Telechea, P; Serra, R, López, J</small></h4><img class="poster" src="5b/grupo-3/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="5b/grupo-3/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="5b/grupo-3/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">La sinestecia</h3>
+          <h4 class="integrantes"><small>Aguirre, A; Perez, J; Masino, M, Guarracino, E</small></h4><img class="poster" src="5b/grupo-6/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="5b/grupo-6/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="5b/grupo-6/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">Holofonía</h3>
+          <h4 class="integrantes"><small>Salaberry, F; Torga, JJ, Sierra, M</small></h4><img class="poster" src="5b/grupo-7/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="5b/grupo-7/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="5b/grupo-7/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">Ilusión óptica &quot;El chocolate infinito&quot;</h3>
+          <h4 class="integrantes"><small>Emma Arias Mommeso, E A; Salpurido, S; Méndez, P; Zappala, L; Oviedo, R</small></h4><img class="poster" src="4a/grupo-1/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="4a/grupo-1/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="4a/grupo-1/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">La extraña paradoja de Shepard</h3>
+          <h4 class="integrantes"><small>Gallinares, L; Reccia, E; Soto, I; Soto, F</small></h4><img class="poster" src="4a/grupo-5/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="4a/grupo-5/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="4a/grupo-5/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
         <div class="informacion">
           <h3 class="titulo">El efecto Shepard</h3>
-          <h4 class="integrantes">Becerra, CT; Lannelongue, J; Nieto, V; Salpurido, V</h4>
-          <p class="resumen"></p>
+          <h4 class="integrantes"><small>Becerra, CT; Lannelongue, J; Nieto, V; Salpurido, V</small></h4><img class="poster" src="4b/grupo-7/poster.jpg" alt="poster científico"/>
           <p class="informe"><a href="4b/grupo-7/informe.pdf">Artículo Científico</a></p>
           <p class="poster"><a href="4b/grupo-7/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">Paradoja del cuadrado perdido</h3>
+          <h4 class="integrantes"><small>Arana, A; Narváez, A; Díaz, B; Sanabria, B; Zandonadi, C; Díaz, G</small></h4><img class="poster" src="4a/grupo-4/poster.jpg" alt="poster científico"/>
+          <p class="informe"><a href="4a/grupo-4/informe.pdf">Artículo Científico</a></p>
+          <p class="poster"><a href="4a/grupo-4/poster.jpg">Poster Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">El misterio del vestido viral</h3>
+          <h4 class="integrantes"><small>Ibarra, C; Bejarano, N; Traba, M; Díaz, L; Schiaffi, C; Urbizu, C</small></h4>
+          <p class="informe"><a href="4b/grupo-1/informe.pdf">Artículo Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">Neurociencia computacional</h3>
+          <h4 class="integrantes"><small>Oviedo, L; Díaz, C</small></h4>
+          <p class="informe"><a href="4b/grupo-3/informe.pdf">Artículo Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">¿Yanny o Laurel?</h3>
+          <h4 class="integrantes"><small>Abt Momesso; Cahue; Hidalgo; Testtibraga; Damico; Rotela, J</small></h4>
+          <p class="informe"><a href="4b/grupo-5/informe.pdf">Artículo Científico</a></p>
+        </div>
+      </article>
+      <article>
+        <div class="informacion">
+          <h3 class="titulo">Ilusión de Hering</h3>
+          <h4 class="integrantes"><small>Mandaradoni, JP; Saravia, N</small></h4>
+          <p class="informe"><a href="4a/grupo-7/informe.pdf">Artículo Científico</a></p>
         </div>
       </article>
     </div>
