correcciones, agregue responsive design, borre un grupo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <h1>Sentidos que perciben y un cerebro que puede ser engañado			</h1>
         <h2>Colegio San José de Marcos Paz</h2>
         <p>Los alumnos/as de 4to y 5to año del Colegio San José de Marcos Paz nos invitan a "desconfiar" de nuestro cerebro.</p>
-        <p>Mediante distintos informes* intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.</p>
+        <p>Mediante distintos informes* intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es el ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.</p>
         <p><small>* Trabajos en proceso de corrección.</small></p>
-      </div><img src="escudo.png" alt=""/>
+      </div>
+      <figure><img src="escudo.png" alt=""/></figure>
     </div>
     <div class="trabajos">
       <article>
@@ -133,13 +134,6 @@
           <h3 class="titulo">El misterio del vestido viral</h3>
           <h4 class="integrantes"><small>Ibarra, C; Bejarano, N; Traba, M; Díaz, L; Schiaffi, C; Urbizu, C</small></h4>
           <p class="informe"><a href="4b/grupo-1/informe.pdf">Artículo Científico</a></p>
-        </div>
-      </article>
-      <article>
-        <div class="informacion">
-          <h3 class="titulo">Neurociencia computacional</h3>
-          <h4 class="integrantes"><small>Oviedo, L; Díaz, C</small></h4>
-          <p class="informe"><a href="4b/grupo-3/informe.pdf">Artículo Científico</a></p>
         </div>
       </article>
       <article>
