correción en el titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Sentidos que perciben... Cerebreo que puede ser engañado</title>
+    <title>Sentidos que perciben y un cerebro que puede ser engañado	</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
